Updated random AI